sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:28: error: value -= is not a member of Int
				fin-=
                                   ^AlgCocktailSort2:40: error: value += is not a member of Int
					debut+=
                                             ^